fixed vertical alignment issues

--- a/playground/app/components/vertical-multiline/vertical-multiline.component.scss
+++ b/playground/app/components/vertical-multiline/vertical-multiline.component.scss
@@ -16,6 +16,10 @@
   }
 }
 
+.small {
+  font-size: 75%;
+}
+
 fs-radio-group {
   min-width: 300px;
 }
